[package]

name = "colonize"
version = "0.1.1"
authors = ["Nikita Pekin <contact@nikitapek.in>"]
description = "A Dwarf Fortress/Rimworld-like game written in Rust"
repository = "https://github.com/indiv0/colonize"
readme = "README.md"
keywords = [
    "colonize",
    "game",
    "dwarf",
    "fortress",
    "rimworld",
]
license = "MIT/Apache-2.0"

[[bin]]

name = "colonize"

[dependencies]
clippy = { version = "*", optional = true }
sdl2 = { version = "0.31.0", default-features = false, features = ["image"] }
time = "0.1.38"
