[package]

name = "colonize"
version = "0.1.1"
authors = ["Nikita Pekin <contact@nikitapek.in>"]
description = "A Dwarf Fortress/Rimworld-like game written in Rust"
repository = "https://github.com/indiv0/colonize"
readme = "README.md"
keywords = [
    "colonize",
    "game",
    "dwarf",
    "fortress",
    "rimworld",
]
license = "MIT/Apache-2.0"

[[bin]]

name = "colonize"

[dependencies]
bincode = "1.0.0"
clippy = { version = "*", optional = true }
env_logger = "0.5.10"
lazy_static = "1.0.0"
log = "0.4.1"
noise = "0.5.1"
sdl2 = { version = "0.31.0", default-features = false, features = ["image", "ttf"] }
serde = "1.0.54"
serde_derive = "1.0.21"
time = "0.1.40"
